--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -6,13 +6,13 @@
 		<p>Satul Costiui se situeaza pe DN186A, la o distanta de 20 de km de municipiul Sighetu Marmatiei, 47 de km de orasul Viseu de Sus si 80 de km de municipiul Baia Mare.</p>
 	</div>
 
-  <img class="b30" src="https://costiui.sirv.com/covid19/covid19-stai-acasa.jpg?profile=Example-Text&text.0.text=Stai%20Acasa%20Familia%20ta%20Conteaza%0A%20%20%20%20%20%20%20www.Costiui.Net&text.0.opacity=100&text.0.color=ff0000&text.0.position=south&text.0.font.weight=800&text.0.background.color=000000" alt="">
+  <img class="b30" src="https://costiui.sirv.com/covid19/covid19-stai-acasa.jpg?profile=Example-Text&text.0.text=Stai%20Acasa%20Familia%20ta%20Conteaza%0A%20%20%20%20%20%20%20www.Costiui.ml&text.0.opacity=100&text.0.color=ff0000&text.0.position=south&text.0.font.weight=800&text.0.background.color=000000" alt="">
 
 
 	<div class="border-dotted radius b30">
 		<img src="/images/ronaszek-tajkep.jpg" alt="uh, Placekitten">
 		<p class="text-left">
-			Fotografie aeriană cu drona <a href="https://www.costiui.net/fotografi/poze-cu-drona/">Poze cu Drona!</a>
+			Fotografie aeriană cu drona <a href="https://costiui.ml/fotografi/poze-cu-drona/">Poze cu Drona!</a>
 		</p>
 	</div>
 
